--- a/views/dca103onlineclasschapter1.ejs
+++ b/views/dca103onlineclasschapter1.ejs
@@ -239,55 +239,44 @@ Note: <em>Microsoft Office word zoom size hi 10%-500%  a ni a, excel leh powerpo
 </p><p>
 6. Microsoft developed MS Office in the year => 1st Aug 1988
 </p><p>
-7. Which of these toolbar allows changing font and their size? => Formatting
+7. Status bar shows the page number on which you are working at.
 </p><p>
-8. Standard toolbar has ________ for the most frequently used commands in words => Icon
+8. ________ shows margin and tab setting => Ruler
 </p><p>
-9. ________ has icons for the most frequently used command => Standard toolbar
+9. ________ refers to the setting the page size, page orientation and page margin => Page setting
 </p><p>
-10. The drawing toolbar helps in drawing objects in a => Word Document <br>
-{ a) Word Document c) Power Point Presentation b) Excel spreadsheet d) All of the above }
+10. Tab positions are arranged in the ________ => Ruler
 </p><p>
-11. The most frequently used commands/tools are displays in => Standard Toolbar
+11. Symbols and special characters can retrieve from ________ menu => Insert
 </p><p>
-12. Status bar shows the page number on which you are working at.
-</p><p>
-13. ________ shows margin and tab setting => Ruler
-</p><p>
-14. ________ refers to the setting the page size, page orientation and page margin => Page setting
-</p><p>
-15. Tab positions are arranged in the ________ => Ruler
-</p><p>
-16. Symbols and special characters can retrieve from ________ menu => Insert
-</p><p>
-17. The dialog box displays the number of pages, characters,
+12. The dialog box displays the number of pages, characters,
 paragraphs and lines included in the word document => Word count option
 </p><p>
-18. The process of adjusting the spacing between characters in a proportional font is also called ________ => Kerning
+13. The process of adjusting the spacing between characters in a proportional font is also called ________ => Kerning
 </p><p>
-19. Format menu change the character and paragraph settings.
+14. Format menu change the character and paragraph settings.
 </p><p>
-20. The character and paragraph settings are manipulated from ________ => Format menu
+15. The character and paragraph settings are manipulated from ________ => Format menu
 </p><p>
-21. Existing file can be retrieved from ________ => File menu
+16. Existing file can be retrieved from ________ => File menu
 </p><p>
-22. Name this sign <img src="/img/clearFormatting.jpg"> => Clear Formatting
+17. Name this sign <img src="/img/clearFormatting.jpg"> => Clear Formatting
 </p><p>
-23. <img src="/img/optionButton.jpg"> represent => Option buttons
+18. <img src="/img/optionButton.jpg"> represent => Option buttons
 </p><p>
-24. Save as box points to the location where you save the document/sheet.
+19. Save as box points to the location where you save the document/sheet.
 </p><p>
-25. To save your work, press ________ => Ctrl + S
+20. To save your work, press ________ => Ctrl + S
 </p><p>
-26. To change the file name and or location of the file of saved filed after editing we use => Save as
+21. To change the file name and or location of the file of saved filed after editing we use => Save as
 </p><p>
-27. F12 is used to open ________ dialogue box => Save as
+22. F12 is used to open ________ dialogue box => Save as
 </p><p>
-28. Print shortcut key is => Ctrl + P
+23. Print shortcut key is => Ctrl + P
 </p><p>
-29. <img src="/img/printPreviewButton.jpg"> represent => Print preview
+24. <img src="/img/printPreviewButton.jpg"> represent => Print preview
 </p><p>
-30. <img src="/img/changeCase.jpg"> represent => Change Case
+25. <img src="/img/changeCase.jpg"> represent => Change Case
 </p>
 
              
@@ -387,21 +376,21 @@ paragraphs and lines included in the word document => Word count option
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory103[i].mcq2 == 'Office button') {
+                          if(thisStudent.assignmentTheory103[i].mcq2 == '10,500') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q2');
                           }
                           //question 3
-                          if(thisStudent.assignmentTheory103[i].mcq3 == 'Status bar') {
+                          if(thisStudent.assignmentTheory103[i].mcq3 == 'Option buttons') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q3');
                           }
                            //question 4
-                          if(thisStudent.assignmentTheory103[i].mcq4 == 'Word wrapping') {
+                          if(thisStudent.assignmentTheory103[i].mcq4 == 'Save as') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -575,7 +564,7 @@ paragraphs and lines included in the word document => Word count option
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. ________ helps to open, save or print document.
+                    Q2. The valid Minimum and maximum zoom size in MS Office is ________.
                     
                   </p>
                   
@@ -585,11 +574,11 @@ paragraphs and lines included in the word document => Word count option
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Print preview" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="10,500" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Print preview
+                                  10,500
                                   
                                 </label>
                                 
@@ -597,11 +586,11 @@ paragraphs and lines included in the word document => Word count option
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="File Menu" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="10,200" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  File Menu
+                                  10,200
                                   
                                 </label>
                                 
@@ -609,11 +598,11 @@ paragraphs and lines included in the word document => Word count option
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Office button" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="50,800" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                 Office button
+                                 50,800
                                   
                                 </label>
                                 
@@ -637,7 +626,7 @@ paragraphs and lines included in the word document => Word count option
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q3. ________ on the lower-most bar provides information about current page number, total pages in the document, documents views and a zoom button.
+                    Q3. <img src="/img/optionButton.jpg"> represent ________.
                     
                   </p>
                   
@@ -647,11 +636,11 @@ paragraphs and lines included in the word document => Word count option
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault1Q3" value="Scrollbar" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault1Q3" value="Check Boxes" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q3">
                                   
-                                  Scrollbar
+                                  Check Boxes
                                   
                                 </label>
                                 
@@ -659,11 +648,11 @@ paragraphs and lines included in the word document => Word count option
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault2Q3" value="Taskbar" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault2Q3" value="Option buttons" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q3">
                                   
-                                  Taskbar
+                                  Option buttons
                                   
                                 </label>
                                 
@@ -671,11 +660,11 @@ paragraphs and lines included in the word document => Word count option
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault3Q3" value="Status bar" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault3Q3" value="Command buttons" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q3">
                                   
-                                  Status bar
+                                 Command buttons
                                   
                                 </label>
                                 
@@ -683,11 +672,11 @@ paragraphs and lines included in the word document => Word count option
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault4Q3" value="Zoom" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault4Q3" value="List boxes" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q3">
                                   
-                                  Zoom
+                                  List boxes
                                   
                                 </label>
                                 
@@ -699,7 +688,7 @@ paragraphs and lines included in the word document => Word count option
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q4.  When the insertion point reaches the right margin, it automatically moves to the next line as you continue typing. This feature is known as ________.
+                    Q4. F12 is used to open ________ dialogue box.
                     
                   </p>
                   
@@ -709,11 +698,11 @@ paragraphs and lines included in the word document => Word count option
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Word wrapping" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Save as" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q4">
                                   
-                                  Word wrapping
+                                  Save as
                                   
                                 </label>
                                 
@@ -721,11 +710,11 @@ paragraphs and lines included in the word document => Word count option
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Text wrapping" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Edit" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q4">
                                   
-                                   Text wrapping
+                                   Edit
                                   
                                 </label>
                                 
