--- a/views/dca103onlineclasschapter2.ejs
+++ b/views/dca103onlineclasschapter2.ejs
@@ -251,7 +251,7 @@ combination with mouse is use => Ctrl
 </p><p>
 16. Header and Footer appears in which menu _______ => Insert
 </p><p>
-17. Footer appear at the bottom of ________ page(s) once inserted => All pages.
+17. Footer appear at the bottom of ________ page(s) once inserted => All
 </p><p>
 18. Page Number appears on all pages once inserted.
 </p><p>
@@ -364,7 +364,7 @@ combination with mouse is use => Ctrl
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory103[i].mcq2 == 'Leading') {
+                          if(thisStudent.assignmentTheory103[i].mcq2 == 'All of the above') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -385,7 +385,7 @@ combination with mouse is use => Ctrl
                             questionNumber.push('Q4');
                           }
                            //question 5
-                          if(thisStudent.assignmentTheory103[i].mcq5 == 'Tabs') {
+                          if(thisStudent.assignmentTheory103[i].mcq5 == '4 paragraphs and 2 sentences of text') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -552,7 +552,7 @@ combination with mouse is use => Ctrl
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. The vertical spacing or the space between the lines within a paragraph is referred to as ________.
+                    Q2. Alignment can also be made using ________.
                     
                   </p>
                   
@@ -562,11 +562,11 @@ combination with mouse is use => Ctrl
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Spacing" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Tab position tools" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Spacing
+                                  Tab position tools
                                   
                                 </label>
                                 
@@ -574,11 +574,11 @@ combination with mouse is use => Ctrl
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Kerning" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Indentation" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Kerning
+                                  Indentation
                                   
                                 </label>
                                 
@@ -586,11 +586,11 @@ combination with mouse is use => Ctrl
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Leading" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Alignment tools" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                 Leading
+                                 Alignment tools
                                   
                                 </label>
                                 
@@ -598,11 +598,11 @@ combination with mouse is use => Ctrl
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="None of the above" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="All of the above" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                 None of the above
+                                 All of the above
                                   
                                 </label>
                                 
@@ -738,7 +738,7 @@ combination with mouse is use => Ctrl
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5. ________ are small projections that appear above the Ribbon with group names such as Home, Insert, Page Layout, etc.
+                   Q5. In MS Word, Typing <b>=rand(4,2)</b> gives ________.
                    
                   </p>
                   
@@ -748,11 +748,11 @@ combination with mouse is use => Ctrl
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault1Q5" value="Icons" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault1Q5" value="4 paragraphs and 2 columns of text" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q5">
                                   
-                                  Icons
+                                  4 paragraphs and 2 columns of tex
                                   
                                 </label>
                                 
@@ -760,11 +760,11 @@ combination with mouse is use => Ctrl
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault2Q5" value="Ribbon" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault2Q5" value="4 paragraphs and 2 sentences of text" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q5">
                                   
-                                  Ribbon
+                                  4 paragraphs and 2 sentences of text
                                   
                                 </label>
                                 
@@ -772,11 +772,11 @@ combination with mouse is use => Ctrl
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault3Q5" value="Group" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault3Q5" value="4 columns and 2 paragraphs of text" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q5">
                                   
-                                  Group
+                                  4 columns and 2 paragraphs of text
                                   
                                 </label>
                                 
@@ -784,11 +784,11 @@ combination with mouse is use => Ctrl
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault4Q5" value="Tabs" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault4Q5" value="6 sentences and 2 paragraphs of text" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q5">
                                   
-                                  Tabs
+                                  6 sentences and 2 paragraphs of text
                                   
                                 </label>
                                 
