--- a/views/dca103onlineclasschapter3.ejs
+++ b/views/dca103onlineclasschapter3.ejs
@@ -176,7 +176,7 @@ Office button → Word Options → Proofing → AutoCorrect → Replace text as 
 1. ________ has a table of common typing errors, which are
 automatically corrected by word => Auto correct
 </p><p>
-2. Common typing/ spelling mistakes in word can be corrected using suggestions => Auto correct
+2. Common typing/spelling mistakes in word can be corrected using suggestions => Auto correct
 </p>
 
              
@@ -276,7 +276,7 @@ automatically corrected by word => Auto correct
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory103[i].mcq2 == 'Office button → Word Options → Proofing → AutoCorrect → Replace text as You Type') {
+                          if(thisStudent.assignmentTheory103[i].mcq2 == 'AutoCorrect') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -444,7 +444,7 @@ automatically corrected by word => Auto correct
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. Menu path for turning on AutoCorrect is ________.
+                    Q2.  ________ has a table of common typing errors, which are automatically corrected by word.
                     
                   </p>
                   
@@ -454,11 +454,11 @@ automatically corrected by word => Auto correct
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Office button → Word Options → Proofing → Replace text as You Type" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Find and replace" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Office button → Word Options → Proofing → Replace text as You Type
+                                  Find and replace
                                   
                                 </label>
                                 
@@ -466,11 +466,11 @@ automatically corrected by word => Auto correct
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Office button → Proofing → AutoCorrect → Replace text as You Type" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Format painter" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Office button → Proofing → AutoCorrect → Replace text as You Type
+                                  Format painter
                                   
                                 </label>
                                 
@@ -478,11 +478,11 @@ automatically corrected by word => Auto correct
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Office button → Word Options → AutoCorrect → Replace text as You Type" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Spelling and grammar" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                 Office button → Word Options → AutoCorrect → Replace text as You Type
+                                 Spelling and grammar
                                   
                                 </label>
                                 
@@ -490,11 +490,11 @@ automatically corrected by word => Auto correct
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Office button → Word Options → Proofing → AutoCorrect → Replace text as You Type" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="AutoCorrect" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                 Office button → Word Options → Proofing → AutoCorrect → Replace text as You Type
+                                 AutoCorrect
                                   
                                 </label>
                                 
