--- a/views/dca103onlineclasschapter5.ejs
+++ b/views/dca103onlineclasschapter5.ejs
@@ -303,7 +303,7 @@ lowercase and uppercase with uppercase automatically.
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory103[i].mcq2 == 'Uppercase') {
+                          if(thisStudent.assignmentTheory103[i].mcq2 == 'Find') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -473,7 +473,7 @@ lowercase and uppercase with uppercase automatically.
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. ________ is capital letters of English alphabets (A, B, C ...)
+                    Q2.  Name this  sign <img src="/img/findButton.jpg"> ________.
                     
                   </p>
                   
@@ -483,11 +483,11 @@ lowercase and uppercase with uppercase automatically.
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Lowercase" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Goto" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Lowercase
+                                  Goto
                                   
                                 </label>
                                 
@@ -495,11 +495,11 @@ lowercase and uppercase with uppercase automatically.
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Capcase" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Replace" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Capcase
+                                  Replace
                                   
                                 </label>
                                 
@@ -507,11 +507,11 @@ lowercase and uppercase with uppercase automatically.
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Capital case" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Find" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                 Capital case
+                                  Find
                                   
                                 </label>
                                 
@@ -519,11 +519,11 @@ lowercase and uppercase with uppercase automatically.
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Uppercase" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Zoom" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                 Uppercase
+                                 Zoom
                                   
                                 </label>
                                 
