--- a/views/dca103onlineclasschapter7.ejs
+++ b/views/dca103onlineclasschapter7.ejs
@@ -148,9 +148,10 @@ processed document => Clipart
 14. =rand(2,4) enter command automatically displays a set of => 2 Paragraphs and 4 sentences.
 </p><p>
 15. To select all of the boxes of an orgaization chart => All of the above <br>
-Right click the chart background and then click select all,
-Press and hold the Shift key and click each box,
-click edit and select all
+{ a) Right click the chart background and then click select all
+b) Press and hold the Shift key and click each box
+c) click edit and select all
+d) All of the above }
 </p>
 
 											</div>
@@ -238,7 +239,7 @@ click edit and select all
                             var questionNumber = [];
                           
                           //question 1
-                          if(thisStudent.assignmentTheory103[i].mcq1 == 'click Insert tab > Illustrations group > choose Shapes button') {
+                          if(thisStudent.assignmentTheory103[i].mcq1 == 'All of these') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -349,7 +350,7 @@ click edit and select all
             
                   <p class="fs-5 fw-light">
                     
-                    Q1. To insert Shapes 
+                    Q1. Using word you can add into your document ________
                     
                   </p>
                   
@@ -359,11 +360,11 @@ click edit and select all
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="click Insert tab > Illustrations group > choose Shapes button" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Graphic" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1">
                                   
-                                  click Insert tab > Illustrations group > choose Shapes button
+                                  Graphic
                                   
                                 </label>
                                 
@@ -371,11 +372,11 @@ click edit and select all
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="click Insert tab > choose Shapes button" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Word art" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2">
                                   
-                                  click Insert tab > choose Shapes button
+                                  Word art
                                   
                                 </label>
                                 
@@ -385,11 +386,11 @@ click edit and select all
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="click Insert tab > Illustrations group" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Picture" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3">
                                   
-                                  click Insert tab > Illustrations group
+                                  Picture
                                   
                                 </label>
                                 
@@ -397,11 +398,11 @@ click edit and select all
                               
                               <div class="form-check ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="click Shapes button" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="All of these" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4">
                                   
-                                  click Shapes button
+                                  All of these
                                   
                                 </label>
                                 
