--- a/views/dca103onlineclasschapter8.ejs
+++ b/views/dca103onlineclasschapter8.ejs
@@ -199,7 +199,7 @@
 </p><p>
 1. Table is formed by a combination of _______ => row and column
 </p><p>
-2. The insert table button is usd to insert table in a word document => Blank <br>
+2. The insert table button is used to insert ________ table in a word document => Blank <br>
 { a. Blank c. Auto-format b. Existing d. None of the above }
 </p><p>
 3. Combination of rows and columns yield => table
@@ -323,7 +323,7 @@
                             questionNumber.push('Q2');
                           }
                            //question 3
-                          if(thisStudent.assignmentTheory103[i].mcq3 == 'columns rows') {
+                          if(thisStudent.assignmentTheory103[i].mcq3 == 'Blank') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -552,7 +552,8 @@
 
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q3. A 5 X 4 table has 5 ________ and 4 ________.
+                    Q3. The insert table button is used to insert ________ table in a word document.
+
                     
                   </p>
                   
@@ -562,11 +563,11 @@
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault1Q3" value="columns rows" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault1Q3" value="Blank" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q3">
                                   
-                                  columns rows
+                                  Blank
                                   
                                 </label>
                                 
@@ -574,11 +575,11 @@
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault2Q3" value="rows columns" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault2Q3" value="Auto-format" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q3">
                                   
-                                  rows columns
+                                  Auto-format
                                   
                                 </label>
                                 
@@ -586,11 +587,11 @@
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault3Q3" value="tables tables" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault3Q3" value="Existing" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q3">
                                   
-                                  tables tables
+                                  Existing
                                   
                                 </label>
                                 
@@ -598,11 +599,11 @@
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault4Q3" value="cells cells" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault4Q3" value="None of the above" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q3">
                                   
-                                  cells cells
+                                  None of the above
                                   
                                 </label>
                                 
