--- a/views/dca103onlineclasschapter11.ejs
+++ b/views/dca103onlineclasschapter11.ejs
@@ -336,6 +336,13 @@ Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh l
                             incorrect++;
                             questionNumber.push('Q3');
                           }
+                           //question 4
+                          if(thisStudent.assignmentTheory103[i].mcq4 == 'Insert function') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q4');
+                          }
                          
                           
                           
@@ -351,7 +358,7 @@ Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh l
               
               <td class="text-center fw-normal">
                 
-               <%= correctCount %>/3
+               <%= correctCount %>/4
 
               </td>
               
@@ -441,11 +448,11 @@ Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh l
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="+" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="%" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1">
                                   
-                                  +
+                                  %
                                   
                                 </label>
                                 
@@ -619,7 +626,67 @@ Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh l
                           </div>
                     
                   </p>
+                  <p class="fs-5 fw-light mt-3">
+                    
+                    Q4. Name this sign <img src="/img/insertFormulaButton.jpg"> ________.
+                    
+                  </p>
                   
+                  <p class="fw-normal mt-3">
+                    
+                    <div class="form-floating align-items-center mb-2">
+      
+                            <div class="form-check mb-1 ms-3">
+                              
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Insert value" required>
+                                
+                                <label class="form-check-label" for="flexRadioDefault1Q4">
+                                  
+                                  Insert value
+                                  
+                                </label>
+                                
+                              </div>
+                              
+                              <div class="form-check mb-1 ms-3">
+                                
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Insert formula" required>
+                                
+                                <label class="form-check-label" for="flexRadioDefault2Q4">
+                                  
+                                  Insert formula
+                                  
+                                </label>
+                                
+                              </div>
+                              
+                              <div class="form-check mb-1 ms-3">
+                                
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Insert function" required>
+                                
+                                <label class="form-check-label" for="flexRadioDefault3Q4">
+                                  
+                                  Insert function
+                                  
+                                </label>
+                                
+                              </div>
+                              
+                              <div class="form-check mb-1 ms-3">
+                                
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="None of the above" required>
+                                
+                                <label class="form-check-label" for="flexRadioDefault4Q4">
+                                  
+                                  None of the above
+                                  
+                                </label>
+                                
+                              </div>
+                            
+                          </div>
+                    
+                  </p>
                   
                   
                   <div class="text-center">
