--- a/views/dca103onlineclasschapter15.ejs
+++ b/views/dca103onlineclasschapter15.ejs
@@ -225,6 +225,8 @@ corresponding changes to a relative set of data => What-if analysis
 </p><p>
 2. Which of the following is correct? => =power(2,3) <br>
 a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
+</p><p>
+3. <img src="/img/sortAndFilter.jpg"> represents => Sort and Filter
 </p>
 
              
@@ -324,7 +326,7 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory103[i].mcq2 == 'One variable') {
+                          if(thisStudent.assignmentTheory103[i].mcq2 == '=power(2,3)') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -336,6 +338,13 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                           } else {
                             incorrect++;
                             questionNumber.push('Q3');
+                          }
+                           //question 4
+                          if(thisStudent.assignmentTheory103[i].mcq4 == 'Sort and Filter') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q4');
                           }
                          
                           
@@ -352,7 +361,7 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
               
               <td class="text-center fw-normal">
                 
-               <%= correctCount %>/3
+               <%= correctCount %>/4
 
               </td>
               
@@ -499,7 +508,7 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. ________ data table is a table that uses a formula with one list of input values.
+                    Q2. Which of the following is correct?
                     
                   </p>
                   
@@ -509,11 +518,11 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="One variable" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="=power(2,3)" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  One variable
+                                  =power(2,3)
                                   
                                 </label>
                                 
@@ -521,11 +530,11 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Two variable" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="=power(2^3)" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Two variable
+                                  =power(2^3
                                   
                                 </label>
                                 
@@ -533,11 +542,11 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="What-if analysis" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="=power(2#3)" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                 What-if analysis
+                                 =power(2#3)
                                   
                                 </label>
                                 
@@ -545,11 +554,11 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Input cell" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="=power(2*3)" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                 Input cell
+                                 =power(2*3)
                                   
                                 </label>
                                 
@@ -620,7 +629,67 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                           </div>
                     
                   </p>
+                   <p class="fs-5 fw-light mt-3">
+                    
+                    Q4. <img src="/img/sortAndFilter.jpg"> represents ________.
+                    
+                  </p>
                   
+                  <p class="fw-normal mt-3">
+                    
+                    <div class="form-floating align-items-center mb-2">
+      
+                            <div class="form-check mb-1 ms-3">
+                              
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Merge and Center" required>
+                                
+                                <label class="form-check-label" for="flexRadioDefault1Q4">
+                                  
+                                  Merge and Center
+                                  
+                                </label>
+                                
+                              </div>
+                              
+                              <div class="form-check mb-1 ms-3">
+                                
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Equation" required>
+                                
+                                <label class="form-check-label" for="flexRadioDefault2Q4">
+                                  
+                                  Equation
+                                  
+                                </label>
+                                
+                              </div>
+                              
+                              <div class="form-check mb-1 ms-3">
+                                
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Sort and Filter" required>
+                                
+                                <label class="form-check-label" for="flexRadioDefault3Q4">
+                                  
+                                  Sort and Filter
+                                  
+                                </label>
+                                
+                              </div>
+                              
+                              <div class="form-check mb-1 ms-3">
+                                
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="All of the above" required>
+                                
+                                <label class="form-check-label" for="flexRadioDefault4Q4">
+                                  
+                                  All of the above
+                                  
+                                </label>
+                                
+                              </div>
+                            
+                          </div>
+                    
+                  </p>
                   
                   
                   <div class="text-center">
